--- a/05-css3/css/master.css
+++ b/05-css3/css/master.css
@@ -1,12 +1,12 @@
 body {
-    background-color: #5d745a;
+    background-color: #04996c;
     font: 16px Arial;
     color: #333;
 }
 
 main {
     background-color: #fff;
-    border: 2px solid #40503e;
+    border: 2px solid #003d2b;
     margin: 20px auto;
     padding: 10px;
     width: 800px;
@@ -15,8 +15,8 @@ main {
 main h1 {
     margin: 0;
     text-align: center;
-    border-bottom: 10px solid #5d745a;
-    background-color: #40503e;
+    border-bottom: 10px solid #00ac78;
+    background-color: #027452;
     padding: 10px;
     color: #fff;
 }
@@ -30,4 +30,10 @@ h1 span a:visited {
     color: #fff;
     text-decoration: none;
     float: left;
+}
+
+@media (max-width: 580px) {
+    main {
+        width: 345px;
+    }
 }
